# my-c-homework

./: .clang-format  .gitignore.txt  CMakeLists.txt  README.md  README.md.txt
.github/workflows/: build-and-lint.yml.txt  build.yml  main.yml
src/homework _1/: main.c
src/homework_1/: main.c  test.c
src/homework_2/: main.c
